# Dattamsha

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/api/: routes.py
app/core/: config.py  errors.py  middleware.py
app/models/: __init__.py  entities.py
app/schemas/: hr.py
app/scripts/: seed_data.py
app/services/: ingest.py  insights.py  nudge_engine.py  ona.py  policy_assistant.py  simulation.py
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/airflow/dags/: hr_data_fabric_dag.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  entities.py
backend/policies/: policies.md
backend/samples/: collaboration_edges.csv  employees.csv  engagement_metrics.csv
backend/tests/: conftest.py  test_advanced_features.py  test_auth.py  test_employee_profiles.py  test_policy_assistant.py  test_scalability.py  test_security.py  test_simulation.py
dbt/: dbt_project.yml  profiles.yml
docs/: architecture.md  production.md  roadmap.md  scaling.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  AppRouter.tsx  format.test.ts  main.tsx  styles.css
samples/: performance_metrics.csv  workload_metrics.csv
tests/: test_health.py  test_security.py
(+37 files in other folders)
