[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dattamsha-hr-intelligence"
version = "0.1.0"
description = "MVP HR analytics and intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.1.0",
  "alembic>=1.15.0",
  "psycopg[binary]>=3.2.6",
  "scikit-learn>=1.6.1",
  "pandas>=2.2.3",
  "networkx>=3.4.2",
  "numpy>=2.2.4",
  "orjson>=3.10.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
